@@ -4,6 +4,7 @@ import it.pagopa.selfcare.commons.base.security.PartyRole;
 import it.pagopa.selfcare.external_api.api.PartyConnector;
 import it.pagopa.selfcare.external_api.connector.rest.client.PartyManagementRestClient;
 import it.pagopa.selfcare.external_api.connector.rest.client.PartyProcessRestClient;
+import it.pagopa.selfcare.external_api.connector.rest.client.UserApiRestClient;
 import it.pagopa.selfcare.external_api.connector.rest.mapper.InstitutionMapper;
 import it.pagopa.selfcare.external_api.connector.rest.model.institution.*;
 import it.pagopa.selfcare.external_api.connector.rest.model.onboarding.InstitutionUpdate;
@@ -17,6 +18,8 @@ import it.pagopa.selfcare.external_api.model.relationship.Relationships;
 import it.pagopa.selfcare.external_api.model.user.ProductInfo;
 import it.pagopa.selfcare.external_api.model.user.RoleInfo;
 import it.pagopa.selfcare.external_api.model.user.UserInfo;
+import it.pagopa.selfcare.user.generated.openapi.v1.dto.OnboardedProductResponse;
+import it.pagopa.selfcare.user.generated.openapi.v1.dto.UserDataResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -46,6 +49,7 @@ public class PartyConnectorImpl implements PartyConnector {
 
     private final PartyProcessRestClient partyProcessRestClient;
     private final PartyManagementRestClient partyManagementRestClient;
+    private final UserApiRestClient userApiRestClient;
     private final InstitutionMapper institutionMapper;
 
     private static final BinaryOperator<InstitutionInfo> MERGE_FUNCTION =
@@ -150,15 +154,15 @@ public class PartyConnectorImpl implements PartyConnector {
         return partyProduct;
     };
 
-
     @Autowired
     public PartyConnectorImpl(PartyProcessRestClient partyProcessRestClient,
                               PartyManagementRestClient partyManagementRestClient,
-                              InstitutionMapper institutionMapper) {
+                              InstitutionMapper institutionMapper,
+                              UserApiRestClient userApiRestClient) {
         this.partyProcessRestClient = partyProcessRestClient;
         this.partyManagementRestClient = partyManagementRestClient;
         this.institutionMapper = institutionMapper;
-
+        this.userApiRestClient = userApiRestClient;
     }
 
 
@@ -193,21 +197,22 @@ public class PartyConnectorImpl implements PartyConnector {
     }
 
     @Override
-    public List<PartyProduct> getInstitutionUserProductsV2(String institutionId, String userId) {
+    public List<String> getInstitutionUserProductsV2(String institutionId, String userId) {
         log.trace("getInstitutionUserProducts start");
         log.debug("getInstitutionUserProducts institutionId = {}, userId = {}", institutionId, userId);
         Assert.hasText(institutionId, INSTITUTION_ID_IS_REQUIRED);
         Assert.hasText(userId, USER_ID_IS_REQUIRED);
-        List<PartyProduct> products = Collections.emptyList();
-        RelationshipsResponse response = partyProcessRestClient.getUserInstitutionRelationships(institutionId, EnumSet.allOf(PartyRole.class), EnumSet.of(ACTIVE), null, null, userId);
-        if (response != null) {
-            products = response.stream()
-                    .map(RELATIONSHIP_INFO_TO_PARTY_PRODUCT_FUNCTION)
-                    .collect(Collectors.toList());
+        Set<String> products = new HashSet<>();
+        ResponseEntity<List<UserDataResponse>> response = userApiRestClient._usersUserIdInstitutionInstitutionIdGet(institutionId, userId, null, null, null, null, List.of(ACTIVE.name()));
+        if (Objects.nonNull(response) && Objects.nonNull(response.getBody()) && Objects.nonNull(response.getBody().get(0))) {
+            //There is only a document for the couple institutionId/userId
+            products = response.getBody().get(0).getProducts().stream()
+                    .map(OnboardedProductResponse::getProductId)
+                    .collect(Collectors.toSet());
         }
         log.debug("getInstitutionUserProducts result = {}", products);
         log.trace("getInstitutionUserProducts start");
-        return products;
+        return products.stream().toList();
     }
 
     private Collection<InstitutionInfo> parseOnBoardingInfo(OnBoardingInfo onBoardingInfo, String productId) {
